--- a/asserts/css/details.less
+++ b/asserts/css/details.less
@@ -575,7 +575,7 @@ main {
 					width: 1.5rem;
 					height: 1.5rem;
 					margin: 0 0.85rem;
-					color: #EE2A46;
+					background: #EE2A46;
 				}
 				p {
 					margin-top: 0.75rem;
