--- a/asserts/css/details.less
+++ b/asserts/css/details.less
@@ -415,7 +415,7 @@ main {
 			.small {
 				font-size: 0.6rem;
 			}
-			.smallest {
+			.smallest {				
 				font-size: 0.5rem;
 			}
 		}
@@ -479,7 +479,7 @@ main {
 		}
 	}
 	.car-good {
-		height: 17.4rem;
+		overflow: hidden;
 		border-bottom: 0.4rem solid #F7F7F8;
 		padding-left: 0.8rem;
 		padding-right: 0.75rem;
@@ -504,6 +504,7 @@ main {
 					margin: 0.5rem 0;
 					font-size: 0.6rem;
 					text-align: center;
+					height: 1.7rem;
 					color: #666666;
 					line-height: 0.85rem;
 				}
@@ -575,7 +576,7 @@ main {
 					width: 1.5rem;
 					height: 1.5rem;
 					margin: 0 0.85rem;
-					color: #EE2A46;
+					background: #EE2A46;
 				}
 				p {
 					margin-top: 0.75rem;
