--- a/asserts/css/details.less
+++ b/asserts/css/details.less
@@ -527,29 +527,24 @@ main {
 			tr:nth-last-of-type(n+2){
 				border-bottom: 0.025rem dashed #D7D7D7;
 			}
-			th {
-				
+			th {				
 				width: 3.4rem;
 				font-size: 0.6rem;
 				line-height: 0.85rem;
-				text-align: left;
-				
+				text-align: left;				
 			}
 			td {
 				padding-top: 0.45rem;
 				padding-bottom: 0.45rem;
 				font-size: 0.6rem;
 				line-height: 0.85rem;
-			}
-			
+			}			
 		}
 	}
 	.how-to-buy {
-		height: 8rem;
+		overflow: hidden;
 		border-bottom: 0.4rem solid #F7F7F8;
-		padding-left: 0.8rem;
-		padding-right: 0.75rem;
-		padding-top: 0.8rem;
+		padding: 0.8rem 0.75rem 1.45rem 0.8rem; 
 		.how-to-buy-title {
 			.definedtitle;
 		}
@@ -558,9 +553,7 @@ main {
 			.right-arrow {
 				float: left;
 				height: 0.6rem;
-				margin-top: 1.85rem;
-				margin-left: 0.3rem;
-				margin-right: 0.3rem;
+				margin: 1.85rem 0.3rem 0;
 			}
 			.how-to-buy-detail {
 				margin-top: 1rem;
@@ -626,7 +619,7 @@ main {
 				}
 			}
 			.our-projects-list {
-				height: 3.7rem;
+				overflow: hidden;
 				.project {
 					width: 3.7rem;
 					height: 3.7rem;
@@ -649,7 +642,7 @@ main {
 				}				
 			}
 			.honors-list {
-				height: 18.8rem;
+				overflow: hidden;
 				margin-top: 1.15rem;
 				margin-bottom: 3.25rem;
 				.honor {
