add function to detail

--- a/asserts/css/details.less
+++ b/asserts/css/details.less
@@ -707,4 +707,63 @@ main {
 			height: 2.25rem;
 		}
 	}
+	.car-config-detail{
+		margin: 0;
+		position: absolute;
+		top:0;
+		background: white;
+		header {
+			text-align: center;
+			height: 90.75/40rem;
+			background: #f8f8f8;
+			border-bottom: 0.05rem solid #ececec;			
+			img {
+				position: absolute;
+				left:0;
+				height:	 rem;
+				width: 2.25rem;
+				height: 2.25rem;
+				padding: 0.725rem; 								
+			}
+			h3 {
+				display: inline-block;				
+				color: #333;
+				line-height: 90.75/40rem;
+				font-size: 0.8rem;	
+			}			
+		}
+		.car-detail-name {	
+			margin: 0.75rem 0 0;
+			padding:0 0.75rem 0.8rem;
+			border-bottom: 0.05rem solid #ececec;			
+			font-size: 0.95rem;
+			
+		}
+		p {
+			font-size: 0.95rem;
+			margin: 0.75rem 0 0;
+			padding:0 0.75rem 0.8rem;
+		}
+		dl {
+
+			dt {
+				padding-left: 0.75rem;
+				line-height:2rem;
+				background-color: #f7f7f8; 
+				margin-bottom: 0.5rem;
+				color:#999;
+				font-size: 0.95rem;
+			}
+			dd {
+				font-size: 0.63rem;
+				padding-left: 0.75rem;
+				margin-bottom: 0.9rem;
+				color:#333;
+				span{
+					display: inline-block;
+					width: 8.6rem;
+				}
+			}
+		}
+	}
 }
